# aiit_iot_project

./: .env.sample  .gitignore  README.md  pyproject.toml
src/httpserver/: app.py  main.py
src/sample/: generator.py
src/sample/json/: completely_left.json  only_back_left.json  random.json  sitting.json
src/serialclient/: main.py
